updating table and files

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Salmon Cookies</title>
-    <link href="./css/style.css" type="text/css" rel="stylesheet"/>
+    <title>Salmon Cookies!!!!</title>
+   //  <link href="./css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
     <header>
