--- a/index.html
+++ b/index.html
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Salmon Cookies!!!!</title>
-   //  <link href="./css/style.css" type="text/css" rel="stylesheet"/>
-  </head>
-  <body>
-    <header>
-      <a id="nav-logo" class="salmon-fish" href="./index.html">Salmon Cookie</a>
-      <nav>
-        <ul>
-          <li><a href="./pages/sales.html">Sales</a></li>
-          <li><a href="./index.html">Home</a></li>
-        </ul>
-      </nav>
-
-    </header>
-    <main>
-      <ul>
-        <li>
-          <h1 class="centered logo salmon-fish">Salmon Cookie</h1>
-        </li>
-        <li>
-          <img class="centered logo" src="./img/salmon.png">
-        </li>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <section id="cookieList">
 
 
-      </ul>
-    </main>
 
-    <!-- <script src="./js/app.js"></script> -->
-  </body>
+
+
+  </section>
+  <script src="js/app.js"></script>
+</body>
 </html>
