refactored code, couldnt make it work properly

--- a/sales.html
+++ b/sales.html
@@ -1,48 +1,19 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Salmon Cookies - Sales</title>
-    <link href="../css/style.css" type="text/css" rel="stylesheet"/>
-  </head>
-  <body>
-    <header>
-      <a id="nav-logo" class="salmon-fish" href="../index.html">Salmon Cookie</a>
-      <nav>
-        <ul>
-          <li><a href="./sales.html">Sales</a></li>
-          <li><a href="../index.html">Home</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <ul>
-        <li>
-          <h2 class="centered">Sales Data</h2>
-          <table id="sales-lists"></table>
-        </li>
-        <li>
-          <h2 class="centered">Number of Cookie Tossers Needed</h2>
-          <table id="cookie-tosser-lists"></table>
-        </li>
-        <li>
-          <form id = "newShop">
-            <fieldset>
-              <legend>Create a New Shop</legend>
-              <lable for = "location">Location</lable>
-              <input name = "location" type = "text"/>
-              <lable for = "minHourlyCustomers">Minimum Customers Per Hour</lable>
-              <input name = "minHourlyCustomers" type = "number"/>
-              <lable for = "maxHourlyCustomers">Maximum Customers Per Hour</lable>
-              <input name = "maxHourlyCustomers" type = "number"/>
-              <lable for = "averageCookiesPerCustomer">Average Cookies Purchased by Customers</lable>
-              <input name = "averageCookiesPerCustomer" type = "number"/>
-              <input type = "submit"/>
-            </fieldset>
-          </form>
-        </li>
-      </ul>
-    </main>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <section id="cookieList">
 
-    <script src="../js/app.js"></script>
-  </body>
+
+
+
+
+  </section>
+  <script src="js/app.js"></script>
+</body>
 </html>
