added sales report to indef file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,33 @@
   <section id="cookieList">
 
 
+    <h1>Sales Report</h1>
 
+    <table id='salesTable'>
+        <thead id='thead'>
+            <tr>
+                <th>Hours</th>
+            </tr>
+        </thead>
+        <tbody id='tbody'>
+        </tbody>
+        <tfoot id='tfoot'>
+            <tr id='totalrow'>
+                <th>Total:</th>
+            </tr>
+        </tfoot>
+    </table>
+
+    <form id="salesForm">
+        <fieldset>
+            <h3>Create New Store Location</h3>
+            <p>Location Name: <input id="locationInput" type="text" name="location"/> </p>
+            <p>Minimum Customers: <input id="minCustomersInput" type="text" name="minCustomers"/></p>
+            <p>Maximum Customers: <input id="maxCustomersInput" type="text" name="maxCustomers"/></p>
+            <p>Average Cookie Quantity Per Order: <input id="salesAverageInput" type="text" name="salesAverage"/></p>
+            <p><input id="submitButton" type="submit" name="submit" value="Generate Store"/></p>
+        </fieldset>
+    </form>
 
 
   </section>
