--- a/index.html
+++ b/index.html
@@ -1,45 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="reset.css" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Pat's Salmon Cookies</title>
 </head>
+
 <body>
-  <section id="cookieList">
+    <!--header Start-->
+    <header>
+        <nav>
+            <ul class="left">
+                <li><A href="#">Home</A></li>
+                <li><a href="#locations"></a></li>
+            </ul>
+            <ul class="right">
+                <li> <a href="#">Contact</a></li>
+                <li> <a href="sales.html">Sales</a> </li>
 
 
-    <h1>Sales Report</h1>
-
-    <table id='salesTable'>
-        <thead id='thead'>
-            <tr>
-                <th>Hours</th>
-            </tr>
-        </thead>
-        <tbody id='tbody'>
-        </tbody>
-        <tfoot id='tfoot'>
-            <tr id='totalrow'>
-                <th>Total:</th>
-            </tr>
-        </tfoot>
-    </table>
-
-    <form id="salesForm">
-        <fieldset>
-            <h3>Create New Store Location</h3>
-            <p>Location Name: <input id="locationInput" type="text" name="location"/> </p>
-            <p>Minimum Customers: <input id="minCustomersInput" type="text" name="minCustomers"/></p>
-            <p>Maximum Customers: <input id="maxCustomersInput" type="text" name="maxCustomers"/></p>
-            <p>Average Cookie Quantity Per Order: <input id="salesAverageInput" type="text" name="salesAverage"/></p>
-            <p><input id="submitButton" type="submit" name="submit" value="Generate Store"/></p>
-        </fieldset>
-    </form>
+            </ul>
 
 
-  </section>
-  <script src="/app.js"></script>
+
+
+
+        </nav>
+    </header>
+
+
 </body>
+
 </html>
