--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
         <nav>
             <ul class="left">
                 <li><A href="#">Home</A></li>
-                <li><a href="#locations"></a></li>
+                <li><a href="#"></a> Locations</a></li>
             </ul>
             <ul class="right">
                 <li> <a href="#">Contact</a></li>
                 <li> <a href="sales.html">Sales</a> </li>
-
-
             </ul>
 
 
@@ -30,8 +28,30 @@
 
 
         </nav>
+        <div>
+            <img src="./img/salmon.png" />
+<p>Pat's Salmon Cookies</p>        
+        </div>
     </header>
-
+<!--Header Finished-->
+<main>
+    <section class="main main-fixed">
+      <p>WELCOME</p>
+    </section>
+    <section class="main">
+      <div id="family">
+        <img src="./img/family.jpg" />
+        <div>
+          <h1>About Us</h1>
+          <p>Wobbegong shark peaclam swimming. Angelfish blue tang, filefish a weird algae, hammerhead grouper kelp.
+            Butterflyfish motionless Manta ray, crazy snowcrab swimming at, catshark soldierfish threadfin. Fishies
+            asian clam painted comber, king crab a elkto.</p>
+          <p>A, grey whale seahorse. Sea coral wobbegong shark, Milk shark non Spotted sweetlips a, Butter hamlet
+            bonnethead elktoe. Frogfish spot hogfish rabbitfish spotted sweetlips swim, peppered moray creature jumped.
+            Spot hogfish banded grunt, mystery snail happy flounder. Swim clownfish fun.</p>
+        </div>
+      </div>
+    </section>
 
 </body>
 
