--- a/index.html
+++ b/index.html
@@ -43,15 +43,71 @@
         <img src="./img/family.jpg" />
         <div>
           <h1>About Us</h1>
-          <p>Wobbegong shark peaclam swimming. Angelfish blue tang, filefish a weird algae, hammerhead grouper kelp.
-            Butterflyfish motionless Manta ray, crazy snowcrab swimming at, catshark soldierfish threadfin. Fishies
-            asian clam painted comber, king crab a elkto.</p>
-          <p>A, grey whale seahorse. Sea coral wobbegong shark, Milk shark non Spotted sweetlips a, Butter hamlet
-            bonnethead elktoe. Frogfish spot hogfish rabbitfish spotted sweetlips swim, peppered moray creature jumped.
-            Spot hogfish banded grunt, mystery snail happy flounder. Swim clownfish fun.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque cupiditate dolore aut enim omnis quasi nobis optio id sit excepturi pariatur ducimus quisquam sunt accusantium iure neque, facere maiores ab.
+          Fugiat atque animi maxime dolor ratione. Quos molestias aperiam facere sit atque, incidunt nulla ducimus. Quo quos ut quod odit incidunt molestiae quidem totam earum et delectus, corporis sunt culpa.
+          Laudantium illo sit excepturi, dolor nulla neque eligendi vero, fugit similique nam quam cum impedit explicabo modi mollitia perferendis sunt. Ipsum qui sapiente minima consequatur vel nostrum facere voluptatem aliquam.
+          Magnam animi earum voluptas dicta quisquam architecto est doloribus eos laudantium quasi. Fugit impedit at incidunt, iure necessitatibus magni cupiditate exercitationem quidem, rerum facilis saepe numquam nobis consequuntur, dolorem explicabo..</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, atque! Voluptate sequi et modi itaque amet, officia dolor nihil totam magnam obcaecati at sed laudantium suscipit rerum veniam impedit? Voluptates.
+          Officia autem magnam quisquam maxime error maiores nesciunt quo deleniti, accusantium debitis fuga nihil dolores voluptatum corporis dolore unde sunt adipisci laudantium dicta ipsam illo. Officiis similique excepturi modi eos.
+          Sit, blanditiis ad. Tempora est, at reiciendis vitae non dicta ea alias ad ullam, eligendi mollitia inventore voluptatem debitis saepe blanditiis quo, deserunt amet explicabo cupiditate eveniet fuga. Ab, excepturi!
+          Sed tempora omnis optio quasi voluptatum. Reiciendis nulla animi eius minus temporibus molestiae quasi commodi? Esse, autem, soluta minus unde cum impedit voluptate, hic dolore atque quam quas incidunt inventore..</p>
         </div>
       </div>
     </section>
+
+    <p>Our Locations</p>
+</section>
+</main>
+
+<article>
+
+</article>
+<footer id="locations">
+<div>
+  <div>
+    <p>Seattle</p>
+    <p>Open 7am-8pm Daily</p>
+    <p>
+    <Address>8675 Salmon Drive, Seattle, WA</Address>
+    </p>
+    <p>Phone Number # :+1(281)330-8004</p>
+  </div>
+  <div>
+    <p>Tokyo</p>
+    <p>Open 7am-8pm Daily</p>
+    <p>
+    <Address>458-1086, Aokicho,Nishinomiya-shi, Hyogo</Address>
+    </p>
+    <p>Phone Number # :+81 75 969 1937</p>
+  </div>
+  <div>
+    <p>Dubai</p>
+    <p>Open 7am-8pm Daily</p>
+    <p>
+    <Address>P.O. Box: 40292, SHARJAH U A E </Address>
+    </p>
+    <p>Phone Number # :971 -43-7218646</p>
+  </div>
+  <div>
+    <p>Paris</p>
+    <p>Open 7am-8pm Daily</p>
+    <p>
+    <Address>10 avenue Voltaire,Malakoff, Île-de-France</Address>
+    </p>
+    <p>Phone Number #:+04.26.06.86.34</p>
+  </div>
+  <div>
+    <p>Lima</p>
+    <p>Open 7am-8pm Daily</p>
+    <p>
+    <Address>Calle Ontario 157,Chorrillos,Lima</Address>
+    </p>
+    <p>Phone Number # :+51 (01)415-1330</p>
+  </div>
+</div>
+</footer>
+</body>
+
 
 </body>
 
