added store table

--- a/index.html
+++ b/index.html
@@ -30,82 +30,121 @@
         </nav>
         <div>
             <img src="./img/salmon.png" />
-<p>Pat's Salmon Cookies</p>        
+            <p>Pat's Salmon Cookies</p>
         </div>
     </header>
-<!--Header Finished-->
-<main>
-    <section class="main main-fixed">
-      <p>WELCOME</p>
-    </section>
-    <section class="main">
-      <div id="family">
-        <img src="./img/family.jpg" />
+    <!--Header Finished-->
+    <main>
+
+        <form id="lab09">
+            <fieldset>
+                <legend>Create a New Shop</legend>
+                <lable for="location">Location</lable>
+                <input name="location" type="text" />
+                <lable for="minHourlyCustomers">Minimum Customers Per Hour</lable>
+                <input name="minHourlyCustomers" type="number" />
+                <lable for="maxHourlyCustomers">Maximum Customers Per Hour</lable>
+                <input name="maxHourlyCustomers" type="number" />
+                <lable for="averageCookiesPerCustomer">Average Cookies Purchased by Customers</lable>
+                <input name="averageCookiesPerCustomer" type="number" />
+                <input type="submit" />
+            </fieldset>
+
+        </form>
+
+
+        <section class="main main-fixed">
+            <p>WELCOME</p>
+        </section>
+        <section class="main">
+            <!-- <div id="family">
+        <img src="./img/family.jpg" /> -->
+            <div>
+                <h1>About Us</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque cupiditate dolore aut enim omnis quasi
+                    nobis optio id sit excepturi pariatur ducimus quisquam sunt accusantium iure neque, facere maiores
+                    ab.
+                    Fugiat atque animi maxime dolor ratione. Quos molestias aperiam facere sit atque, incidunt nulla
+                    ducimus. Quo quos ut quod odit incidunt molestiae quidem totam earum et delectus, corporis sunt
+                    culpa.
+                    Laudantium illo sit excepturi, dolor nulla neque eligendi vero, fugit similique nam quam cum impedit
+                    explicabo modi mollitia perferendis sunt. Ipsum qui sapiente minima consequatur vel nostrum facere
+                    voluptatem aliquam.
+                    Magnam animi earum voluptas dicta quisquam architecto est doloribus eos laudantium quasi. Fugit
+                    impedit at incidunt, iure necessitatibus magni cupiditate exercitationem quidem, rerum facilis saepe
+                    numquam nobis consequuntur, dolorem explicabo..</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, atque! Voluptate sequi et modi itaque
+                    amet, officia dolor nihil totam magnam obcaecati at sed laudantium suscipit rerum veniam impedit?
+                    Voluptates.
+                    Officia autem magnam quisquam maxime error maiores nesciunt quo deleniti, accusantium debitis fuga
+                    nihil dolores voluptatum corporis dolore unde sunt adipisci laudantium dicta ipsam illo. Officiis
+                    similique excepturi modi eos.
+                    Sit, blanditiis ad. Tempora est, at reiciendis vitae non dicta ea alias ad ullam, eligendi mollitia
+                    inventore voluptatem debitis saepe blanditiis quo, deserunt amet explicabo cupiditate eveniet fuga.
+                    Ab, excepturi!
+                    Sed tempora omnis optio quasi voluptatum. Reiciendis nulla animi eius minus temporibus molestiae
+                    quasi commodi? Esse, autem, soluta minus unde cum impedit voluptate, hic dolore atque quam quas
+                    incidunt inventore..</p>
+            </div>
+            </div>
+        </section>
+
+        <p>Our Locations</p>
+        </section>
+    </main>
+
+    <article>
+
+    </article>
+
+
+
+    <!-- Locations start-->
+    <footer id="locations">
         <div>
-          <h1>About Us</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque cupiditate dolore aut enim omnis quasi nobis optio id sit excepturi pariatur ducimus quisquam sunt accusantium iure neque, facere maiores ab.
-          Fugiat atque animi maxime dolor ratione. Quos molestias aperiam facere sit atque, incidunt nulla ducimus. Quo quos ut quod odit incidunt molestiae quidem totam earum et delectus, corporis sunt culpa.
-          Laudantium illo sit excepturi, dolor nulla neque eligendi vero, fugit similique nam quam cum impedit explicabo modi mollitia perferendis sunt. Ipsum qui sapiente minima consequatur vel nostrum facere voluptatem aliquam.
-          Magnam animi earum voluptas dicta quisquam architecto est doloribus eos laudantium quasi. Fugit impedit at incidunt, iure necessitatibus magni cupiditate exercitationem quidem, rerum facilis saepe numquam nobis consequuntur, dolorem explicabo..</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, atque! Voluptate sequi et modi itaque amet, officia dolor nihil totam magnam obcaecati at sed laudantium suscipit rerum veniam impedit? Voluptates.
-          Officia autem magnam quisquam maxime error maiores nesciunt quo deleniti, accusantium debitis fuga nihil dolores voluptatum corporis dolore unde sunt adipisci laudantium dicta ipsam illo. Officiis similique excepturi modi eos.
-          Sit, blanditiis ad. Tempora est, at reiciendis vitae non dicta ea alias ad ullam, eligendi mollitia inventore voluptatem debitis saepe blanditiis quo, deserunt amet explicabo cupiditate eveniet fuga. Ab, excepturi!
-          Sed tempora omnis optio quasi voluptatum. Reiciendis nulla animi eius minus temporibus molestiae quasi commodi? Esse, autem, soluta minus unde cum impedit voluptate, hic dolore atque quam quas incidunt inventore..</p>
+            <div>
+                <p>Seattle</p>
+                <p>Open 7am-8pm Daily</p>
+                <p>
+                <Address>8675 Salmon Drive, Seattle, WA</Address>
+                </p>
+                <p>Phone Number # :+1(281)330-8004</p>
+            </div>
+            <div>
+                <p>Tokyo</p>
+                <p>Open 7am-8pm Daily</p>
+                <p>
+                <Address>458-1086, Aokicho,Nishinomiya-shi, Hyogo</Address>
+                </p>
+                <p>Phone Number # :+81 75 969 1937</p>
+            </div>
+            <div>
+                <p>Dubai</p>
+                <p>Open 7am-8pm Daily</p>
+                <p>
+                <Address>P.O. Box: 40292, SHARJAH U A E </Address>
+                </p>
+                <p>Phone Number # :971 -43-7218646</p>
+            </div>
+            <div>
+                <p>Paris</p>
+                <p>Open 7am-8pm Daily</p>
+                <p>
+                <Address>10 avenue Voltaire,Malakoff, Île-de-France</Address>
+                </p>
+                <p>Phone Number #:+04.26.06.86.34</p>
+            </div>
+            <div>
+                <p>Lima</p>
+                <p>Open 7am-8pm Daily</p>
+                <p>
+                <Address>Calle Ontario 157,Chorrillos,Lima</Address>
+                </p>
+                <p>Phone Number # :+51 (01)415-1330</p>
+                <!--Locations End-->
+            </div>
         </div>
-      </div>
-    </section>
-
-    <p>Our Locations</p>
-</section>
-</main>
-
-<article>
-
-</article>
-<footer id="locations">
-<div>
-  <div>
-    <p>Seattle</p>
-    <p>Open 7am-8pm Daily</p>
-    <p>
-    <Address>8675 Salmon Drive, Seattle, WA</Address>
-    </p>
-    <p>Phone Number # :+1(281)330-8004</p>
-  </div>
-  <div>
-    <p>Tokyo</p>
-    <p>Open 7am-8pm Daily</p>
-    <p>
-    <Address>458-1086, Aokicho,Nishinomiya-shi, Hyogo</Address>
-    </p>
-    <p>Phone Number # :+81 75 969 1937</p>
-  </div>
-  <div>
-    <p>Dubai</p>
-    <p>Open 7am-8pm Daily</p>
-    <p>
-    <Address>P.O. Box: 40292, SHARJAH U A E </Address>
-    </p>
-    <p>Phone Number # :971 -43-7218646</p>
-  </div>
-  <div>
-    <p>Paris</p>
-    <p>Open 7am-8pm Daily</p>
-    <p>
-    <Address>10 avenue Voltaire,Malakoff, Île-de-France</Address>
-    </p>
-    <p>Phone Number #:+04.26.06.86.34</p>
-  </div>
-  <div>
-    <p>Lima</p>
-    <p>Open 7am-8pm Daily</p>
-    <p>
-    <Address>Calle Ontario 157,Chorrillos,Lima</Address>
-    </p>
-    <p>Phone Number # :+51 (01)415-1330</p>
-  </div>
-</div>
-</footer>
+    </footer>
 </body>
 
 
