removed sales table

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="reset.css" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="reset.css" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Pat's Salmon Cookies</title>
 </head>
 
@@ -28,7 +28,7 @@
 
 
         </nav>
-        <div>
+        <div id=" salmon picture">
             <img src="./img/salmon.png" />
             <p>Pat's Salmon Cookies</p>
         </div>
@@ -36,26 +36,12 @@
     <!--Header Finished-->
     <main>
 
-        <form id="lab09">
-            <fieldset>
-                <legend>Create a New Shop</legend>
-                <lable for="location">Location</lable>
-                <input name="location" type="text" />
-                <lable for="minHourlyCustomers">Minimum Customers Per Hour</lable>
-                <input name="minHourlyCustomers" type="number" />
-                <lable for="maxHourlyCustomers">Maximum Customers Per Hour</lable>
-                <input name="maxHourlyCustomers" type="number" />
-                <lable for="averageCookiesPerCustomer">Average Cookies Purchased by Customers</lable>
-                <input name="averageCookiesPerCustomer" type="number" />
-                <input type="submit" />
-            </fieldset>
 
-        </form>
 
 
         <section class="main main-fixed">
             <p>WELCOME</p>
-        </section>
+        
         <section class="main">
             <!-- <div id="family">
         <img src="./img/family.jpg" /> -->
