--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="reset.css" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Prosto+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
     <title>Pat's Salmon Cookies</title>
 </head>
 
@@ -14,21 +16,21 @@
     <!--header Start-->
     <header>
         <nav>
-            <ul class="left">
-                <li><A href="#">Home</A></li>
-                <li><a href="#"></a> Locations</a></li>
-            </ul>
-            <ul class="right">
-                <li> <a href="#">Contact</a></li>
-                <li> <a href="sales.html">Sales</a> </li>
-            </ul>
-
-
-
-
+            <ul>
+                <li class="nav-links">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="nav-links">
+                    <a href="#locations">Locations</a>
+                </li>
+                <li class="nav-links">
+                    <a href="#order">Contact Us</a>
+                </li>
+                <li class="nav-links">
+                    <a href="sales.html">Sales</a>
 
         </nav>
-        <div id=" salmon picture">
+        <div id=" salmon-picture">
             <img src="./img/salmon.png" />
             <p>Pat's Salmon Cookies</p>
         </div>
@@ -39,49 +41,61 @@
 
 
 
-        <section class="main main-fixed">
-            <p>WELCOME</p>
-        
-        <section class="main">
-            <!-- <div id="family">
-        <img src="./img/family.jpg" /> -->
-            <div>
-                <h1>About Us</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque cupiditate dolore aut enim omnis quasi
-                    nobis optio id sit excepturi pariatur ducimus quisquam sunt accusantium iure neque, facere maiores
-                    ab.
-                    Fugiat atque animi maxime dolor ratione. Quos molestias aperiam facere sit atque, incidunt nulla
-                    ducimus. Quo quos ut quod odit incidunt molestiae quidem totam earum et delectus, corporis sunt
-                    culpa.
-                    Laudantium illo sit excepturi, dolor nulla neque eligendi vero, fugit similique nam quam cum impedit
-                    explicabo modi mollitia perferendis sunt. Ipsum qui sapiente minima consequatur vel nostrum facere
-                    voluptatem aliquam.
-                    Magnam animi earum voluptas dicta quisquam architecto est doloribus eos laudantium quasi. Fugit
-                    impedit at incidunt, iure necessitatibus magni cupiditate exercitationem quidem, rerum facilis saepe
-                    numquam nobis consequuntur, dolorem explicabo..</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, atque! Voluptate sequi et modi itaque
-                    amet, officia dolor nihil totam magnam obcaecati at sed laudantium suscipit rerum veniam impedit?
-                    Voluptates.
-                    Officia autem magnam quisquam maxime error maiores nesciunt quo deleniti, accusantium debitis fuga
-                    nihil dolores voluptatum corporis dolore unde sunt adipisci laudantium dicta ipsam illo. Officiis
-                    similique excepturi modi eos.
-                    Sit, blanditiis ad. Tempora est, at reiciendis vitae non dicta ea alias ad ullam, eligendi mollitia
-                    inventore voluptatem debitis saepe blanditiis quo, deserunt amet explicabo cupiditate eveniet fuga.
-                    Ab, excepturi!
-                    Sed tempora omnis optio quasi voluptatum. Reiciendis nulla animi eius minus temporibus molestiae
-                    quasi commodi? Esse, autem, soluta minus unde cum impedit voluptate, hic dolore atque quam quas
-                    incidunt inventore..</p>
-            </div>
-            </div>
-        </section>
+        <section id="main main-fixed">
+            <div id="about">
 
-        <p>Our Locations</p>
+            </div>
+            <p>WELCOME</p>
+            </div>
+            <section id="main">
+                <!-- <div id="family">
+                <img src="./img/family.jpg" /> -->
+                <div>
+                    <h1>About Us</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque cupiditate dolore aut enim omnis
+                        quasi
+                        nobis optio id sit excepturi pariatur ducimus quisquam sunt accusantium iure neque, facere
+                        maiores
+                        ab.
+                        Fugiat atque animi maxime dolor ratione. Quos molestias aperiam facere sit atque, incidunt nulla
+                        ducimus. Quo quos ut quod odit incidunt molestiae quidem totam earum et delectus, corporis sunt
+                        culpa.
+                        Laudantium illo sit excepturi, dolor nulla neque eligendi vero, fugit similique nam quam cum
+                        impedit
+                        explicabo modi mollitia perferendis sunt. Ipsum qui sapiente minima consequatur vel nostrum
+                        facere
+                        voluptatem aliquam.
+                        Magnam animi earum voluptas dicta quisquam architecto est doloribus eos laudantium quasi. Fugit
+                        impedit at incidunt, iure necessitatibus magni cupiditate exercitationem quidem, rerum facilis
+                        saepe
+                        numquam nobis consequuntur, dolorem explicabo..</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, atque! Voluptate sequi et modi
+                        itaque
+                        amet, officia dolor nihil totam magnam obcaecati at sed laudantium suscipit rerum veniam
+                        impedit?
+                        Voluptates.
+                        Officia autem magnam quisquam maxime error maiores nesciunt quo deleniti, accusantium debitis
+                        fuga
+                        nihil dolores voluptatum corporis dolore unde sunt adipisci laudantium dicta ipsam illo.
+                        Officiis
+                        similique excepturi modi eos.
+                        Sit, blanditiis ad. Tempora est, at reiciendis vitae non dicta ea alias ad ullam, eligendi
+                        mollitia
+                        inventore voluptatem debitis saepe blanditiis quo, deserunt amet explicabo cupiditate eveniet
+                        fuga.
+                        Ab, excepturi!
+                        Sed tempora omnis optio quasi voluptatum. Reiciendis nulla animi eius minus temporibus molestiae
+                        quasi commodi? Esse, autem, soluta minus unde cum impedit voluptate, hic dolore atque quam quas
+                        incidunt inventore..</p>
+                </div>
+                </div>
+            </section>
+
+            <p>Our Locations</p>
         </section>
     </main>
 
-    <article>
 
-    </article>
 
 
 
@@ -135,5 +149,6 @@
 
 
 </body>
+<script>src = "app.js"</script>
 
 </html>
